Fix SSL redirect loop - remove htaccess redirect

--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,4 @@
-# Force HTTPS
-RewriteEngine On
-RewriteCond %{HTTPS} off
-RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [R=301,L]
-
-# Security Headers
+# Security Headers Only
 Header set X-Content-Type-Options "nosniff"
 Header set X-Frame-Options "DENY"
 Header set X-XSS-Protection "1; mode=block"
